cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)

project(sound_proc_project)
set(sound_proc ${PROJECT_NAME})
if (MSVC)
    add_compile_options(/W4 /WX)
else()s
    add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()
set(MAIN_FILE main.cpp)
add_library(${LIB_NAME} "sample_stream.cpp" "processor.cpp")
add_library(mute_converter SHARED "mute_converter.cpp")
add_library(mix_converter SHARED "mix_converter.cpp")
add_library(vol_converter SHARED "volume_converter.cpp")
add_executable(${EXEC_NAME} main.cpp)
target_link_libraries(${EXEC_NAME} ${LIB_NAME} mute_converter mix_converter vol_converter)